--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="./js/burger.js" defer></script>
     <script src="./js/map.js" defer></script>
     <script src="./js/header-buttons.js" defer></script>
+    <script src="./js/form-input.js" defer></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                     <button class="header__burger">
                         <span class="header__line"></span>
                     </button>
-                    <a href="#" class="header__logo logo link"><img src="/img/Лого.png" alt="Логотип"></a>
+                    <a href="#" class="header__logo logo link"><img src="./img/Лого.png" alt="Логотип"></a>
                     <nav class="header__menu">
                         <ul class="header__list ">
                             <li class="header__item item-top"><a href="#" class="header__link link">О нас</a></li>
@@ -213,58 +214,95 @@
                         </div>
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="/img/gallery/Rectangle 1.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 1.png" alt="Картинка">
+                                </div>
+
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 2.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 2.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 3.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 3.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 4.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 4.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 5.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 5.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 6.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 6.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 7.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 7.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 8.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 8.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 9.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 9.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 10.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 10.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide ">
-                                <img src="./img/gallery/Rectangle 11.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 11.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 12.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 12.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 13.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 13.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 14.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 14.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 15.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 15.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 16.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 16.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 17.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 17.png" alt="Картинка">
+                                </div>
                             </div>
                             <div class="swiper-slide">
-                                <img src="./img/gallery/Rectangle 18.png" alt="Картинка">
+                                <div class="swiper__img-block">
+                                    <img src="./img/gallery/Rectangle 18.png" alt="Картинка">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -296,7 +334,7 @@
                 </p>
                 <div class="history__info">
                     <div class="history__left">
-                        <div class="history__left-img"></div>
+                        <img class="history__left-img" src="./img/image 3.jpg" alt="Картинка">
                         <div class="history__celebrity">
                             <h2 class="history__name">Доменико Гирландайо</h2>
                             <span class="history__age">2 июня 1448 — 11 января 1494.</span>
@@ -821,7 +859,9 @@
                     <div class="events__all swiper-wrapper">
                         <div class="swiper-slide events-slide events-1">
                             <div class="events__block">
-                                <div class="events__img-1 events__img"></div>
+                                <div class="events__img-1 events__img">
+                                    <img src="./img/events/Rectangle 101-1.jpg" alt="Картинка">
+                                </div>
                                 <div class="events__adrees">Музей им. Щусева <br> с 20 марта по 30 апреля</div>
                                 <div class="events__info">
                                     <h2 class="events__title">Книжная гравюра в живом восприятии</h2>
@@ -838,7 +878,9 @@
                         </div>
                         <div class="swiper-slide events-slide events-2">
                             <div class="events__block">
-                                <div class="events__img-2 events__img"></div>
+                                <div class="events__img-2 events__img">
+                                    <img src="./img/events/Rectangle 101-2.jpg" alt="Картинка">
+                                </div>
                                 <div class="events__adrees">ММОМА <br> 24 марта 19:00</div>
                                 <div class="events__info">
                                     <h2 class="events__title">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h2>
@@ -856,7 +898,9 @@
                         </div>
                         <div class="swiper-slide events-slide events-3 ">
                             <div class="events__block">
-                                <div class="events__img-3 events__img"></div>
+                                <div class="events__img-3 events__img">
+                                    <img src="./img/events/Rectangle 101.jpg" alt="Картинка">
+                                </div>
                                 <div class="events__adrees">Еврейский музей <br> с 31 марта по 21 апреля</div>
                                 <div class="events__info">
                                     <h2 class="events__title">Выставка «Формация 2020»</h2>
@@ -874,7 +918,9 @@
                         </div>
                         <div class="swiper-slide events-slide events-4 ">
                             <div class="events__block">
-                                <div class="events__img-1 events__img"></div>
+                                <div class="events__img-4 events__img">
+                                    <img src="./img/events/Rectangle 104.png" alt="Картинка">
+                                </div>
                                 <div class="events__adrees">Музей им. Щусева <br> с 20 марта по 30 апреля</div>
                                 <div class="events__info">
                                     <h2 class="events__title">Книжная гравюра в живом восприятии</h2>
@@ -890,7 +936,9 @@
                         </div>
                         <div class="swiper-slide events-slide events-5">
                             <div class="events__block">
-                                <div class="events__img-2 events__img"></div>
+                                <div class="events__img-5 events__img">
+                                    <img src="./img/events/Rectangle 105.png" alt="Картинка">
+                                </div>
                                 <div class="events__adrees">ММОМА <br> 24 марта 19:00</div>
                                 <div class="events__info">
                                     <h2 class="events__title">«Открытая дискуссия». Дмитрий Петров и Сергей Ильин.</h2>
@@ -908,7 +956,9 @@
                         </div>
                         <div class="swiper-slide events-slide  events-6">
                             <div class="events__block">
-                                <div class="events__img-3 events__img"></div>
+                                <div class="events__img-6 events__img">
+                                    <img src="./img/events/Rectangle 101.jpg" alt="Картинка">
+                                </div>
                                 <div class="events__adrees">Еврейский музей <br> с 31 марта по 21 апреля</div>
                                 <div class="events__info">
 
@@ -1140,21 +1190,50 @@
                     государства смешаны с не уникальными данными до степени совершенной неузнаваемости, из-за чего
                     возрастает их статус бесполезности. Прежде всего, постоянное информационно-пропагандистское
                     <span class="detailed__tooltip">
-                        <span class="detailed__icon"></span>
+                        <span class="detailed__icon">
+                            <svg width="16" height="16" viewBox="0 0 16 16"  xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.5 8C15.5 12.1421 12.1421 15.5 8 15.5C3.85786 15.5 0.5 12.1421 0.5 8C0.5 3.85786 3.85786 0.5 8 0.5C12.1421 0.5 15.5 3.85786 15.5 8Z"
+                                    stroke="#9D5CD0" />
+                                <path
+                                    d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z"
+                                    fill="black" />
+                            </svg>
+                        </span>
                         <span class="popup">Пример современных тенденций - современная методология разработки </span>
                     </span>
                     обеспечение нашей деятельности однозначно фиксирует необходимость экономической
                     целесообразности принимаемых решений. И нет сомнений, что действия представителей оппозиции
                     могут быть рассмотрены
                     <span class="detailed__tooltip">
-                        <span class="detailed__icon"></span>
+                        <span class="detailed__icon">
+                            <svg width="16" height="16" viewBox="0 0 16 16"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.5 8C15.5 12.1421 12.1421 15.5 8 15.5C3.85786 15.5 0.5 12.1421 0.5 8C0.5 3.85786 3.85786 0.5 8 0.5C12.1421 0.5 15.5 3.85786 15.5 8Z"
+                                    stroke="#9D5CD0" />
+                                <path
+                                    d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z"
+                                    fill="black" />
+                            </svg>
+                        </span>
                         <span class="popup">Приятно, граждане, наблюдать, как сделанные на базе аналитики выводы
                             вызывают
                             у вас эмоции </span>
                     </span>
                     исключительно в разрезе маркетинговых и финансовых
                     <span class="detailed__tooltip">
-                        <span class="detailed__icon"></span>
+                        <span class="detailed__icon">
+                            <svg width="16" height="16" viewBox="0 0 16 16"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15.5 8C15.5 12.1421 12.1421 15.5 8 15.5C3.85786 15.5 0.5 12.1421 0.5 8C0.5 3.85786 3.85786 0.5 8 0.5C12.1421 0.5 15.5 3.85786 15.5 8Z"
+                                    stroke="#9D5CD0" />
+                                <path
+                                    d="M7.26154 6.4551H8.73846V13H7.26154V6.4551ZM8 4.90259C7.71282 4.90259 7.4718 4.81126 7.27692 4.62861C7.09231 4.44597 7 4.22273 7 3.9589C7 3.69508 7.09231 3.47184 7.27692 3.28919C7.4718 3.0964 7.71282 3 8 3C8.28718 3 8.52308 3.09132 8.70769 3.27397C8.90256 3.44647 9 3.66464 9 3.92846C9 4.20243 8.90256 4.43582 8.70769 4.62861C8.52308 4.81126 8.28718 4.90259 8 4.90259Z"
+                                    fill="black" />
+                            </svg>
+                        </span>
                         <span class="popup">В стремлении повысить качество</span>
                     </span>
                     предпосылок. Банальные, но неопровержимые выводы, а также представители
@@ -1259,11 +1338,16 @@
     <footer class="footer">
         <div class="fix-container">
             <div class="footer__all">
-                <a href="#" class="footer__logo logo link"><img src="/img/Лого.png" alt="Логотип"></a>
+                <a href="#" class="footer__logo logo link"><img src="./img/Лого.png" alt="Логотип"></a>
                 <div class="footer__sprite">
-                    <a class="footer__vk footer__social" href="https://vk.com/"></a>
-                    <a class="footer__inst footer__social" href="https://www.instagram.com/"></a>
-                    <a class="footer__fc footer__social" href="https://www.facebook.com/"></a>
+
+                    <a class="footer__vk footer__social" href="https://vk.com/">
+                    </a>
+                    <a class="footer__inst footer__social" href="https://www.instagram.com/">
+
+                    </a>
+                    <a class="footer__fc footer__social" href="https://www.facebook.com/">
+                    </a>
                 </div>
             </div>
         </div>
