--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 	<link rel="stylesheet" href="./css/effects/swiper/swiper-bundle.min.css">
 	<link rel="stylesheet" href="./css/style.min.css">
 
-	<link rel="preload" href="fonts/OpenSans-Bold.woff2" as="font" crossorigin>
-	<link rel="preload" href="fonts/OpenSans-Regular.woff2" as="font" crossorigin>
-	<link rel="preload" href="fonts/OpenSans-SemiBold.woff2" as="font" crossorigin>
+	<link rel="preload" href="/fonts/OpenSans-Bold.woff2" as="font" crossorigin>
+	<link rel="preload" href="/fonts/OpenSans-Regular.woff2" as="font" crossorigin>
+	<link rel="preload" href="/fonts/OpenSans-SemiBold.woff2" as="font" crossorigin>
 </head>
 
 <body>
