--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="./css/choices.min.css">
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/effects/swiper/swiper-bundle.min.css">
-	<link rel="stylesheet" href="./css/style.min.css">
+	<link rel="stylesheet" href="./css/style.css">
 
 	<link rel="preload" href="/fonts/OpenSans-Bold.woff2" as="font" crossorigin>
 	<link rel="preload" href="/fonts/OpenSans-Regular.woff2" as="font" crossorigin>
@@ -53,6 +53,7 @@
 							</li>
 						</ul>
 					</nav>
+
 					<a href="#" class="header__link header__akk">
 						<svg class="icon-Vector" width="13" height="13" viewBox="0 0 13 13"
 							xmlns="http://www.w3.org/2000/svg">
@@ -73,22 +74,150 @@
 			<div class="fix-container">
 				<div class="header__unity unity-bottom">
 					<ul class="header__list">
-						<li class="header__item item-bottom">
-							<button class="header__link link-bottom">Реализм</button>
+						<li class="header__item item-bottom header__elem-bottom">
+							<button class="header__link link-bottom">Реализм </button>
+							<ul class="header__content" data-simplebar>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+							</ul>
 						</li>
-						<li class="header__item item-bottom">
+						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Импрессионизм</button>
+							<ul class="header__content" data-simplebar>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+							</ul>
 						</li>
-						<li class="header__item item-bottom">
-							<button class="header__link link-bottom">
-								Постимпрессионизм
-							</button>
+						<li class="header__item item-bottom header__elem-bottom">
+							<button class="header__link link-bottom">Постимпрессионизм</button>
+							<ul class="header__content" data-simplebar>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+							</ul>
 						</li>
-						<li class="header__item item-bottom">
+						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Авангард</button>
+							<ul class="header__content" data-simplebar>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+							</ul>
 						</li>
-						<li class="header__item item-bottom">
+						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Футуризм</button>
+							<ul class="header__content" data-simplebar>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-2">Фридрих</a></li>
+								<li><a href="#" class="header__select select-3">Леонардо</a></li>
+								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+							</ul>
 						</li>
 					</ul>
 					<form class="header__search-full">
@@ -118,11 +247,11 @@
 		</div>
 	</header>
 	<main>
-		<section class="start">
+		<div class="start">
 			<div class="swiper-container start__container">
 				<div class="fix-container start__img">
 					<div class="start__info">
-						<h1 class="start__title">Прикоснитесь к прекрасному</h1>
+						<div class="start__title">Прикоснитесь к прекрасному</div>
 						<p class="start__descr">
 							Мы вынуждены отталкиваться от того, что реализация намеченных
 							плановых заданий создаёт предпосылки для новых предложений.
@@ -150,7 +279,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 		<section class="project">
 			<div class="fix-container">
 				<div class="project__info">
@@ -374,7 +503,7 @@
 						<div class="history__right">
 							<div class="history__period">
 								<label for="history__button-1">С 1400 по 1499 гг. </label>
-								<button id="history__button-1" class="history__button"></button>
+								<button id="history__button-1" class="history__button history__button-active"></button>
 								<div class="slide slide__active active-1">
 									<ul class="history__content">
 										<li class="history__item">
@@ -473,7 +602,7 @@
 								</div>
 							</div>
 							<div class="history__period">
-								<label for="history__button-2">С 1500 по 1599 гг. </label>
+								<label for="history__button-2">С 1500 по 1599 гг.</label>
 								<button id="history__button-2" class="history__button"></button>
 								<div class="slide slide__active">
 									<ul class="history__content">
@@ -1287,81 +1416,94 @@
 				<div class="editions__content">
 					<div class="editions__filter">
 						<h1 class="editions__title title">Издания</h1>
-						<h2>Категории</h2>
+						<h2 class="category__list-title">Категории</h2>
 						<ul class="editions__all-category">
-							<li>
+							<li class="editions__elem ed__elem-1">
 								<input id="category-1" type="checkbox" />
 								<label class="editions__category" for="category-1">
 									Бестселлеры
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-2">
 								<input id="category-2" type="checkbox" />
 								<label class="editions__category" for="category-2">
 									Искусство
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-3">
 								<input id="category-3" type="checkbox" />
 								<label class="editions__category" for="category-3">
 									Архитектура
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-4">
 								<input id="category-4" type="checkbox" />
 								<label class="editions__category" for="category-4">
 									Дизайн
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-5">
 								<input id="category-5" type="checkbox" />
 								<label class="editions__category" for="category-5">
 									Мода
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-6">
 								<input id="category-6" type="checkbox" />
 								<label class="editions__category" for="category-6">
 									Детям
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-7">
 								<input id="category-7" type="checkbox" />
 								<label class="editions__category" for="category-7">
 									Художественная литература
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-8">
 								<input id="category-8" type="checkbox" />
 								<label class="editions__category" for="category-8">
 									Публицистика
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-9">
 								<input id="category-9" type="checkbox" />
 								<label class="editions__category" for="category-9">
 									Путеводители
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-10">
 								<input id="category-10" type="checkbox" />
 								<label class="editions__category" for="category-10">
 									Философия
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-11">
 								<input id="category-11" type="checkbox" />
 								<label class="editions__category" for="category-11">
 									Учебная литература
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
-							<li>
+							<li class="editions__elem ed__elem-12">
 								<input id="category-12" type="checkbox" />
 								<label class="editions__category" for="category-12">
 									Журналы и газеты
 								</label>
+								<button class="editions__elem-button"></button>
 							</li>
 						</ul>
+						<ul class="editions__all-category--new"></ul>
 						<div class="editions__price price-1">
 							<h3>Цена</h3>
 							<div class="editions__cost">
