--- a/index.html
+++ b/index.html
@@ -77,30 +77,31 @@
 						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Реализм </button>
 							<ul class="header__content" data-simplebar>
+								<li><a href="#" class="header__select select-1">Фридрих</a></li>
 								<li><a href="#" class="header__select select-2">Фридрих</a></li>
 								<li><a href="#" class="header__select select-3">Леонардо</a></li>
 								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
 								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
-								<li><a href="#" class="header__select select-2">Фридрих</a></li>
-								<li><a href="#" class="header__select select-3">Леонардо</a></li>
-								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
-								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
-								<li><a href="#" class="header__select select-2">Фридрих</a></li>
-								<li><a href="#" class="header__select select-3">Леонардо</a></li>
-								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
-								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
-								<li><a href="#" class="header__select select-2">Фридрих</a></li>
-								<li><a href="#" class="header__select select-3">Леонардо</a></li>
-								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
-								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
-								<li><a href="#" class="header__select select-2">Фридрих</a></li>
-								<li><a href="#" class="header__select select-3">Леонардо</a></li>
-								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
-								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
-								<li><a href="#" class="header__select select-2">Фридрих</a></li>
-								<li><a href="#" class="header__select select-3">Леонардо</a></li>
-								<li><a href="#" class="header__select select-4">Верроккьо</a></li>
-								<li><a href="#" class="header__select select-5">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-6">Фридрих</a></li>
+								<li><a href="#" class="header__select select-7">Леонардо</a></li>
+								<li><a href="#" class="header__select select-8">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-9">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-10">Фридрих</a></li>
+								<li><a href="#" class="header__select select-11">Леонардо</a></li>
+								<li><a href="#" class="header__select select-12">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-13">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-14">Фридрих</a></li>
+								<li><a href="#" class="header__select select-15">Леонардо</a></li>
+								<li><a href="#" class="header__select select-16">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-17">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-18">Фридрих</a></li>
+								<li><a href="#" class="header__select select-19">Леонардо</a></li>
+								<li><a href="#" class="header__select select-20">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-21">Тинторетто</a></li>
+								<li><a href="#" class="header__select select-22">Фридрих</a></li>
+								<li><a href="#" class="header__select select-23">Леонардо</a></li>
+								<li><a href="#" class="header__select select-24">Верроккьо</a></li>
+								<li><a href="#" class="header__select select-25">Тинторетто</a></li>
 							</ul>
 						</li>
 						<li class="header__item item-bottom header__elem-bottom">
@@ -263,18 +264,15 @@
 				</div>
 				<div class="swiper-wrapper">
 					<div class="swiper-slide start__img-1">
-						<img class="lazyload" src="#"
-							data-src="./img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash2.webp"
+						<img src="./img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash2.webp"
 							alt="Картинка" />
 					</div>
 					<div class="swiper-slide start__img-2">
-						<img class="lazyload" src="#"
-							data-src="./img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash1.webp"
+						<img src="./img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash1.webp"
 							alt="Картинка" />
 					</div>
 					<div class="swiper-slide start__img-3">
-						<img class="lazyload" src="#"
-							data-src="./img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash3.webp"
+						<img src="./img/start-block/birmingham-museums-trust-MK_98NuC4-4-unsplash3.webp"
 							alt="Картинка" />
 					</div>
 				</div>
@@ -326,9 +324,9 @@
 					</div>
 					<div class="gallery__right swiper-container">
 						<div class="slide slide__list">
-							<button class="btn__left btn"></button>
+							<button class="btn__left btn"><span class="btn__img"></span></button>
 							<span class="list list__counter">1 / 3</span>
-							<button class="btn__right btn"></button>
+							<button class="btn__right btn"> <span class="btn__img"></span></button>
 						</div>
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
@@ -1517,9 +1515,9 @@
 					</div>
 					<div class="editions__books swiper-container">
 						<div class="slide-list">
-							<button class="btn__left btn btn__editions-left"></button>
+							<button class="btn__left btn btn__editions-left"><span class="btn__img"></span></button>
 							<span class="list list__counter">1 / 3</span>
-							<button class="btn__right btn btn__editions-right"></button>
+							<button class="btn__right btn btn__editions-right"><span class="btn__img"></span></button>
 						</div>
 						<div class="swiper-wrapper editions__size">
 							<div class="swiper-slide content-2">
