--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1,
             shrink-to-fit=no" />
 	<title>Blancard: Курсовая работа</title>
-
+	<link rel="icon" href="/img/icon/Blanchard.png" type="image/x-icon">
 	<link rel="stylesheet" href="./css/simplebar.css">
 	<link rel="stylesheet" href="./css/choices.min.css">
 	<link rel="stylesheet" href="./css/normalize.css">
@@ -87,7 +87,7 @@
 								<a href="#" class="akk-log-in__sing-up">Регистрация</a>
 								<span class="akk-log-in__elem-text">или</span>
 								<ul class="akk-log-in__social">
-									<li class="akk-log-in__elem"><a href="#" class="akk-log-in__link">
+									<li class="akk-log-in__elem"><a href="https://vk.com/" class="akk-log-in__link">
 											<svg width="45" height="45" viewBox="0 0 45 45" fill="none"
 												xmlns="http://www.w3.org/2000/svg">
 												<path
@@ -95,7 +95,8 @@
 													fill="#CACACA" />
 											</svg>
 										</a></li>
-									<li class="akk-log-in__elem"><a href="#" class="akk-log-in__link">
+									<li class="akk-log-in__elem"><a href="https://www.instagram.com/"
+											class="akk-log-in__link">
 											<svg width="45" height="45" viewBox="0 0 45 45" fill="none"
 												xmlns="http://www.w3.org/2000/svg">
 												<path
@@ -109,7 +110,8 @@
 													fill="#CACACA" />
 											</svg>
 										</a></li>
-									<li class="akk-log-in__elem"><a href="#" class="akk-log-in__link">
+									<li class="akk-log-in__elem"><a href="https://www.facebook.com/"
+											class="akk-log-in__link">
 											<svg width="45" height="45" viewBox="0 0 45 45" fill="none"
 												xmlns="http://www.w3.org/2000/svg">
 												<path
@@ -387,12 +389,11 @@
 						определяет каждого участника как способного принимать собственные решения касаемо распределения
 						внутренних резервов и&nbsp;ресурсов. Не&nbsp;следует, однако, забывать, что высококачественный
 						прототип будущего проекта влечет за&nbsp;собой процесс внедрения и&nbsp;модернизации модели
-						развития. Повседневная
-						практика показывает, что высокое качество позиционных исследований создаёт необходимость
-						включения в&nbsp;производственный план целого ряда внеочередных мероприятий с&nbsp;учётом
-						комплекса распределения внутренних резервов и&nbsp;ресурсов. В&nbsp;рамках спецификации
-						современных стандартов, действия представителей оппозиции набирают популярность среди
-						определенных слоев населения, а&nbsp;значит, должны быть разоблачены.
+						развития. Повседневная практика показывает, что высокое качество позиционных исследований
+						создаёт необходимость включения в производственный план целого ряда внеочередных
+						мероприятий с&nbsp;учётом комплекса распределения внутренних резервов и&nbsp;ресурсов.
+						В&nbsp;рамках спецификации современных стандартов, действия представителей оппозиции набирают
+						популярность среди определенных слоев населения, а&nbsp;значит, должны быть разоблачены.
 					</p>
 				</div>
 			</div>
@@ -414,7 +415,7 @@
 							<p class="gallery__descr">
 								Вам предоставляется 10 бесплатных скачиваний. Для увеличения
 								количества скачиваний
-								<a class="gallery__descr-link" href="#">авторизуйтесь</a> ,
+								<a class="gallery__descr-link" href="#">авторизуйтесь</a>,
 								либо воспользуйтесь лицензией.
 							</p>
 						</div>
@@ -577,13 +578,11 @@
 						</ul>
 					</div>
 					<p class="history__descr descr-1">
-						Акционеры крупнейших компаний, которые представляют собой яркий
-						пример континентально-европейского типа политической культуры,
-						будут объявлены нарушающими общечеловеческие нормы этики и морали.
-						Являясь всего лишь частью общей картины, стремящиеся вытеснить
-						традиционное производство, нанотехнологии и по сей день остаются
-						уделом либералов, которые жаждут быть функционально разнесены на
-						независимые элементы.
+						Акционеры крупнейших компаний, которые представляют собой яркий пример
+						континентально-европейского типа политической культуры, будут объявлены нарушающими
+						общечеловеческие нормы этики и&nbsp;морали. Являясь всего лишь частью общей картины, стремящиеся
+						вытеснить традиционное производство, нанотехнологии и&nbsp;по&nbsp;сей день остаются уделом
+						либералов, которые жаждут быть функционально разнесены на&nbsp;независимые элементы.
 					</p>
 					<div class="history__info">
 						<div class="history__left">
@@ -623,39 +622,40 @@
 							</div>
 						</div>
 						<div class="history__right accordion">
-							<h2 class="history__title-button" tabindex="0"><span> С 1400 по 1499
-									гг.</span>
+							<h2 class="history__title-button">
+								<span> С 1400 по 1499гг.</span>
 								<button id="history__button-1" class="history__button history__button-active"></button>
 							</h2>
 							<div class="slide">
 								<ul class="history__content">
-									<li class="history__item">Бенедетто ди Биндо</li>
-									<li class="history__item">Бергоньоне, Амброджо</li>
-									<li class="history__item">Биссоло, Франческо</li>
-									<li class="history__item">Больтраффио, Джованни</li>
-									<li class="history__item">Бонсиньори, Франческо</li>
-									<li class="history__item">Боттичини, Рафаэлло</li>
-									<li class="history__item">Брамантино</li>
-									<li class="history__item">Бреа, Людовико</li>
-									<li class="history__item">Бьяджо д’Антонио Туччи</li>
-									<li class="history__item">Веккьетта</li>
-									<li class="history__item">Андреа Верроккьо</li>
-									<li class="history__item history__link-active">Доменико Гирландайо</li>
-									<li class="history__item">Беноццо Гоццоли</li>
-									<li class="history__item">Граначчи, Франческо</li>
-									<li class="history__item">Грегорио ди Чекко</li>
-									<li class="history__item">Джованни да Удине</li>
-									<li class="history__item">Джованни ди Паоло</li>
-									<li class="history__item">Джорджоне</li>
-									<li class="history__item">Парентино, Бернардо</li>
-									<li class="history__item">Пезеллино</li>
-									<li class="history__item">Пьетро Перуджино</li>
-									<li class="history__item">Перуцци, Бальдассаре</li>
-									<li class="history__item">Пизанелло</li>
-									<li class="history__item">Пинтуриккьо</li>
+									<li class="history__item"><button>Бенедетто ди Биндо</button> </li>
+									<li class="history__item"><button>Бергоньоне, Амброджо</button> </li>
+									<li class="history__item"><button>Биссоло, Франческо</button> </li>
+									<li class="history__item"><button>Больтраффио, Джованни</button> </li>
+									<li class="history__item"><button>Бонсиньори, Франческо</button> </li>
+									<li class="history__item"><button>Боттичини, Рафаэлло</button> </li>
+									<li class="history__item"><button>Брамантино</button> </li>
+									<li class="history__item"><button>Бреа, Людовико</button> </li>
+									<li class="history__item"><button>Бьяджо д’Антонио Туччи</button> </li>
+									<li class="history__item"><button>Веккьетта</button> </li>
+									<li class="history__item"><button>Андреа Верроккьо</button> </li>
+									<li class="history__item history__link-active"><button>Доменико Гирландайо</button>
+									</li>
+									<li class="history__item"><button>Беноццо Гоццоли</button> </li>
+									<li class="history__item"><button>Граначчи, Франческо</button> </li>
+									<li class="history__item"><button>Грегорио ди Чекко</button> </li>
+									<li class="history__item"><button>Джованни да Удине</button> </li>
+									<li class="history__item"><button>Джованни ди Паоло</button> </li>
+									<li class="history__item"><button>Джорджоне</button> </li>
+									<li class="history__item"><button>Парентино, Бернардо</button></li>
+									<li class="history__item"><button>Пезеллино</button> </li>
+									<li class="history__item"><button>Пьетро Перуджино</button></li>
+									<li class="history__item"><button>Перуцци, Бальдассаре</button> </li>
+									<li class="history__item"><button>Пизанелло</button> </li>
+									<li class="history__item"><button>Пинтуриккьо</button> </li>
 								</ul>
 							</div>
-							<h2 class="history__title-button" tabindex="0"><span> С 1500 по 1599 гг.</span>
+							<h2 class="history__title-button"><span> С 1500 по 1599 гг.</span>
 								<button id="history__button-2" class="history__button"></button>
 							</h2>
 							<div class="slide ">
@@ -673,7 +673,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="history__title-button" tabindex="0"><span>С 1600 по 1699 гг.</span>
+							<h2 class="history__title-button"><span>С 1600 по 1699 гг.</span>
 								<button id="history__button-3" class="history__button"></button>
 							</h2>
 							<div class="slide ">
@@ -690,7 +690,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="history__title-button" tabindex="0"><span> С 1700 по 1799 гг.</span>
+							<h2 class="history__title-button"><span> С 1700 по 1799 гг.</span>
 								<button id="history__button-4" class="history__button"></button>
 							</h2>
 							<div class="slide ">
@@ -707,7 +707,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="history__title-button" tabindex="0"><span> С 1800 по 1899 гг.</span>
+							<h2 class="history__title-button"><span> С 1800 по 1899 гг.</span>
 								<button id="history__button-5" class="history__button"></button>
 							</h2>
 							<div class="slide ">
@@ -724,7 +724,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="history__title-button" tabindex="0"><span>С 1900 по 1999 гг.</span>
+							<h2 class="history__title-button"><span>С 1900 по 1999 гг.</span>
 								<button id="history__button-6" class="history__button"></button>
 							</h2>
 							<div class="slide ">
@@ -741,7 +741,7 @@
 									</div>
 								</div>
 							</div>
-							<h2 class="history__title-button" tabindex="0"><span>С 2000 гг.</span>
+							<h2 class="history__title-button"><span>С 2000 гг.</span>
 								<button id="history__button-7" class="history__button"></button>
 							</h2>
 							<div class="slide">
@@ -1259,11 +1259,12 @@
 					<h2 class="detailed__title title">Проекты</h2>
 					<div class="detailed__descr">
 						Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности
-						однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые
-						государства смешаны с не уникальными данными до степени совершенной неузнаваемости, из-за чего
-						возрастает их статус бесполезности. Прежде всего,
-						постоянное&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А&nbsp;ещё независимые
+						государства смешаны с&nbsp;не&nbsp;уникальными данными до степени совершенной
+						неузнаваемости, из-за чего возрастает их&nbsp;статус бесполезности. Прежде всего, постоянное
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 						информационно-пропагандистское
+
 						<span class="detailed__tooltip">
 							<button class="detailed__icon">
 								<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
@@ -1303,7 +1304,7 @@
 							</span>
 						</span>
 						обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности
-						принимаемых решений. И нет сомнений, что действия представителей оппозиции могут быть
+						принимаемых решений. И&nbsp;нет сомнений, что действия представителей оппозиции могут быть
 						рассмотрены
 						<span class="detailed__tooltip">
 							<button class="detailed__icon">
@@ -1361,7 +1362,7 @@
 								выводы вызывают у&nbsp;вас эмоции
 							</span>
 						</span>
-						исключительно в разрезе маркетинговых и финансовых
+						исключительно в&nbsp;разрезе маркетинговых и&nbsp;финансовых
 						<span class="detailed__tooltip">
 							<button class="detailed__icon">
 								<svg width="16" height="16" viewBox="0 0
@@ -1429,10 +1430,10 @@
 							</button>
 							<span class="popup popup-3">В&nbsp;стремлении повысить качество</span>
 						</span>
-						предпосылок. Банальные, но
-						неопровержимые выводы, а также представители современных социальных резервов призывают нас к
-						новым свершениям, которые, в свою очередь, должны быть смешаны с не уникальными данными до
-						степени совершенной неузнаваемости. Подробнее:
+						предпосылок. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также представители современных
+						социальных резервов призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны
+						быть смешаны с&nbsp;не&nbsp;уникальными данными до&nbsp;степени совершенной неузнаваемости.
+						Подробнее:
 						<a href="/blanchard-art.ru/projects/about">blanchard-art.ru/projects/about</a>
 					</div>
 				</div>
@@ -1466,6 +1467,7 @@
 									</a>
 								</div>
 								<div class="swiper-slide partners__size">
+
 									<a href="#" class="partners__border">
 										<img class="lazyload" src="#" data-src="./img/partners/three.png"
 											alt="Картинка" />
@@ -1551,9 +1553,11 @@
 						</ul>
 					</div>
 				</div>
+				<div class="contacts__map" id="map"></div>
+
 			</div>
 
-			<div class="contacts__map" id="map"></div>
+
 
 		</section>
 	</main>
@@ -1603,9 +1607,10 @@
 		</div>
 	</footer>
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU"></script>
+
 	<script src="./js/jquery-3.5.1.min.js"></script>
 	<script src="./js/jquery-ui.min.js"></script>
-	<script src="./js/swiper/swiper-bundle.min.js"></script>
+	<script src="../js/swiper/swiper-bundle.min.js"></script>
 	<script src="./js/simplebar.min.js" defer></script>
 	<script src="./js/choices.min.js" defer></script>
 	<script src="./js/just-validate.min.js" defer></script>
